# caked

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  perc.ipynb  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml  python-publish.yml
docs/source/: conf.py  index.rst  installation.rst
src/caked/: __init__.py  base.py  dataloader.py  hdf5.py  hdf5_utils.py  utils.py
src/caked/Transforms/: augments.py  base.py  transforms.py  utils.py
src/caked/Wrappers/: __init__.py
tests/: conftest.py  corrupt.mrc  pytest.ini  test_disk_io.py  test_io.py  test_map_dataset.py  test_map_io.py
tests/testdata_mrc/mrc/: realmap.mrc
