# Setup configuration for the package
[metadata]
name = caked


# Options for the package

[options]

packages = find:
python_requires = >=3.8





[options.packages.find]
where = src
exclude =
    tests
    .github
    .gitignore
    .gitattributes
    .pytest_cache
    .git
    .vscode
    .history
    *.egg
    *.egg-info
    docs
    site
    mkdocs.yml
    *.ipynb
    .mypy_cache
    .ruff_cache
