# Setup configuration for the package
[metadata]
name = caked


# Options for the package

[options]

packages = find:
python_requires = >=3.8
package_dir =
    = src


# where to add pip dependencies

install_requires =
    torch
    numpy
    pandas
    mrcfile
    torchvision
    scipy
    pyarrow
    ccpem-utils
    h5py
    psutil


[options.packages.find]
where =
    src
    src/Transforms
    src/Wrappers

exclude =
    tests
    .github
    .gitignore
    .gitattributes
    .pytest_cache
    .git
    .vscode
    .history
    *.egg
    *.egg-info
    docs
    site
    mkdocs.yml
    *.ipynb
    .mypy_cache
    .ruff_cache
